--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">APP PRODUCT PTKB</string>
     <string name="rc_rating">(%s)</string>
+    <string name="ex_content_deskripsi">lorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is ametlorem ipsum dolor is amet, lorem ipsum dlor is amet</string>
+    <string name="komentar">Komentar (%s)</string>
 </resources>
